--- a/src/css/text.scss
+++ b/src/css/text.scss
@@ -40,10 +40,13 @@
   font-size: 16px;
   line-height: 1.38;
   letter-spacing: -0.2px;
-  color: #000000;
+  color: #8c8c8c;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  &::placeholder {
+    color: #e0e0e0;
+  }
 }
 
 @media (max-width: 500px) {
@@ -67,9 +70,12 @@
     font-size: 16px;
     line-height: 1.38;
     letter-spacing: -0.2px;
-    color: #000000;
+    color: #8c8c8c;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    &::placeholder {
+      color: #e0e0e0;
+    }
   }
 }
